# refactored-spoon

./: .editorconfig  .flaskenv  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  config.py  database.db  pyproject.toml  requirements.txt  restaurants.py  run.py
app/: __init__.py  app.py  cli.py  config.py  models.py  routes.py
app/auth/: __init__.py  forms.py  routes.py
app/errors/: __init__.py  handlers.py
app/main/: __init__.py  routes.py
app/static/js/: dataTables-custom-settings.js  flash-messages-timeout.js
app/templates/: 404.html  500.html  edit.html  index.html  login.html
app/templates/auth/: login.html
app/templates/errors/: 404.html
app/templates/layouts/: base.html  navigation.html
app/translations/ca/LC_MESSAGES/: messages.mo
app/translations/es/LC_MESSAGES/: messages.mo
migrations/versions/: 0d51ead49eb2_add_predefined_data.py  4a5d62c58710_add_table_users.py  a47fb7609d8a_users_table.py  cc746199efcb_add_restaurant_tables.py
refactored-spoon/: app.py
refactored-spoon/static/css/: custom.css
refactored-spoon/templates/: index.html
refactored_spoon/: app.py
refactored_spoon/static/css/: custom.css
refactored_spoon/static/js/: custom.js
refactored_spoon/templates/: edit.html  index.html  login.html
