[tool.poetry]
name = "refactored-spoon"
version = "1.4.0"
description = "Directory de restaurants"
authors = ["Albert Ferran Casas <albert.ferran@gmail.com>"]
license = "LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.0.3"
flask-sqlalchemy = "3.1.1"
flask-minify = "0.48"
flask-migrate = "4.0.7"
flask-login = "0.6.3"
flask-wtf = "1.2.1"
flask-babel = "4.0.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.0"
python-dotenv = "^1.0.1"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = false
version_files = [
    "pyproject.toml:^version",
    "Makefile:^VERSION"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
